--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-opencv-python
-numpy
-PyQt6
-websockets
+opencv-python>=4.8.0
+numpy>=2.0.0
+PyQt6>=6.9.0
+websockets>=15.0.0
+pyinstaller>=6.14.0
+Pillow>=11.0.0
